Fixed most alignment issues

--- a/src/main/resources/ui/overlay/credits/credits.css
+++ b/src/main/resources/ui/overlay/credits/credits.css
@@ -1,37 +1,23 @@
-*{
-    -fx-background-color: -root-background-color;
+* {
+    -fx-alignment: center;
+    -fx-background-color: TRANSPARENT;
 }
 
-.credits{
-    -fx-border-width: 2;
+.root {
+    -fx-padding: 100;
+}
+
+.container {
+    -fx-background-color: -root-background-color;
     -fx-border-color: -default-border-color;
-    -fx-background-color: -root-background-color;
-    -fx-pref-width: 1000;
-    -fx-pref-height: 600;
-    -fx-alignment: center;
+    -fx-border-width: 2;
+    -fx-padding: 50;
 }
 
-.creditsPane{
-    -fx-alignment: center;
-    -fx-background-color: -root-background-color;
-}
-
-.labelBox{
-    -fx-spacing: 30;
-    -fx-alignment: center;
-    -fx-background-color: -root-background-color;
-}
-
-.box{
-    -fx-alignment: center;
-}
-
-.label{
+.label {
     -fx-font-size: 24;
     -fx-font-weight: bold;
     -fx-text-fill: rgb(255,255,0);
-    -fx-text-alignment: center;
-    -fx-alignment: center;
 }
 
 
